--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 <body>
 
     <header>
-    
+
 
         <h1>Janiece Lewis</h1>
-
+        <!-- nav bar -->
         <nav>
             <ul>
                 <li>
@@ -23,7 +23,7 @@
                 </li>
 
                 <li>
-                    <a href="#">Work</a>
+                    <a href="#work">Work</a>
                 </li>
 
                 <li>
@@ -40,67 +40,94 @@
 
     </header>
 
-<!-- for hero image -->
-    <div class="hero"></div>
-   
-<!-- about section -->
-    <section>
-        <h2>About</h2>
-        <p>Hello, I'm Janiece. Thanks for stopping by my profile. I am currently enrolled in a full stack coding bootcamp with OSU. Here is a collection of what I've worked on so far.</p>
+    <!-- for hero banner -->
+    <section class="hero">
+        <div>
+            <h2>Let's Code!💻</h2>
+        </div>
     </section>
 
-   
-<!-- <div class="image-1" -->
-<section class="column">
-    <h2>Work</h2>
-</section>
 
- <!-- flex-box container for work section -->
- <div class="flex-container">
+    <!-- main content -->
+    <main class="page-wrapper">
 
-<!-- <div class="image-1" -->
- <a href="https://janiece-lewis.github.io/SEO-Codebase-Refactor/" ><img src="./assets/images/workimage1.jpg"></a>
-</section>
-<h3>Landing Page</h3>
-<span>HTML CSS</span>
-</div>
+        <!-- about section -->
+        <section class="page-section" id="about"></section>
 
-<!-- <div class="image-2" -->
- <a href="https://janiece-lewis.github.io/prework-study-guide/" ><img src="./assets/images/workimage2.jpg"></a>
-</section>
-<h3>Prework Study Guide</h3>
-<span>HTML CSS</span>
-</div>
+        <section class="about-content">
+            <h2>About</h2>
+            <p>Hello, I'm Janiece. Thanks for stopping by my profile. I am currently enrolled in a full-stack coding
+                bootcamp with OSU. Here is a collection of what I've worked on so far.</p>
+        </section>
 
-<!-- <div class="image-3" -->
- <a href="https://janiece-lewis.github.io/SEO-Codebase-Refactor/" ><img src="./assets/images/workimage3.jpg"></a>
-</section>
-<h3>Codebase-Recator</h3>
-<span>HTML semantics</span>
-</div>
+        <!-- portfolio container -->
+        <section class="page-section" id="work">
 
-<!-- <div class="image-4" -->
- <a href="https://janiece-lewis.github.io/SEO-Codebase-Refactor/" ><img src="./assets/images/workimage1.jpg"></a>
-</section>
-<h3>Coming Soon</h3>
-</div>
+            <h2>Work</h2>
 
-<!-- <div class="image-5" -->
- <a href="https://janiece-lewis.github.io/SEO-Codebase-Refactor/" ><img src="./assets/images/workimage1.jpg"></a>
-</section>
-<h3>Coming Soon</h3>
-</div>
+            <!-- flex-box container for work sections -->
+            <div class="work-flex-container">
+
+                <!-- landing page work section -->
+                <div class="main">
+                    <a href="https://janiece-lewis.github.io/landing-page-mini-project/" target="_blank"><img
+                            src="./assets/images/rich-smith-PVvr1ScBd_0-unsplash.jpg"></a>
+
+                    <h3>Landing Page</h3>
+                    <span>HTML CSS</span>
+                </div>
+
+                <!-- prework study guide work section -->
+                <div class="image-box">
+                    <a href="https://janiece-lewis.github.io/prework-study-guide/" target="_blank"><img
+                            src="./assets/images/workimage2.jpg"></a>
+
+                    <h3>Prework Study Guide</h3>
+                    <span>HTML CSS</span>
+                </div>
+
+                <!-- codebase-refactor work section -->
+                <div class="image-box">
+                    <a href="https://janiece-lewis.github.io/SEO-Codebase-Refactor/" target="_blank"><img
+                            src="./assets/images/workimage3.jpg"></a>
+
+                    <h3>Codebase-Recator</h3>
+                    <span>HTML semantics</span>
+                </div>
+                <!-- coming soon work section -->
+                <div class="image-box">
+                    <img src="./assets/images/cs1.jpg"></a>
+                    <h3>Coming Soon</h3>
+                    <span>please wait</span>
+                </div>
+
+                <!-- coming soon work section  -->
+                <div class="image-box">
+                    <img src="./assets/images/cs2.jpg"></a>
+                    <h3>Coming Soon</h3>
+                    <span>please wait</span>
+                </div>
+
+            </div>
 
 
+        </section>
 
-    </div>
+        <!-- contact section -->
+
+        <section class="page-section" id="contact"></section>
+
+        <h2>Contact</h2>
+
+
+    </main>
 
 
 
 
 
 </body>
-    
-</body>
+
+
 
 </html>
