updated flex class names

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header>
 
 
-        <h1>Janiece Lewis</h1>
+        <div class="name"><h1>Janiece Lewis</h1></div>
         <!-- nav bar -->
         <nav>
             <ul>
@@ -43,9 +43,11 @@
     <!-- for hero banner -->
     <section class="hero">
         <div>
-            <h2>Let's Code!💻</h2>
-        </div>
+            <!-- hero banner text -->
+           <h2 class="hero-text">Let's Code!💻</h2>
+        </div> 
     </section>
+   
 
 
     <!-- main content -->
@@ -62,23 +64,23 @@
 
         <!-- portfolio container -->
         <section class="page-section" id="work">
-
             <h2>Work</h2>
+       
 
             <!-- flex-box container for work sections -->
             <div class="work-flex-container">
 
-                <!-- landing page work section -->
-                <div class="main">
+                <!-- landing page flex item -->
+                <div class="main-flex-item">
                     <a href="https://janiece-lewis.github.io/landing-page-mini-project/" target="_blank"><img
-                            src="./assets/images/rich-smith-PVvr1ScBd_0-unsplash.jpg"></a>
+                            src="./assets/images/workimage1.jpg"></a>
 
                     <h3>Landing Page</h3>
                     <span>HTML CSS</span>
                 </div>
 
-                <!-- prework study guide work section -->
-                <div class="image-box">
+                <!-- prework study guide flex item -->
+                <div class="flex-item prework">
                     <a href="https://janiece-lewis.github.io/prework-study-guide/" target="_blank"><img
                             src="./assets/images/workimage2.jpg"></a>
 
@@ -86,23 +88,23 @@
                     <span>HTML CSS</span>
                 </div>
 
-                <!-- codebase-refactor work section -->
-                <div class="image-box">
+                <!-- codebase-refactor flex item -->
+                <div class="flex-item codebase">
                     <a href="https://janiece-lewis.github.io/SEO-Codebase-Refactor/" target="_blank"><img
                             src="./assets/images/workimage3.jpg"></a>
 
                     <h3>Codebase-Recator</h3>
                     <span>HTML semantics</span>
                 </div>
-                <!-- coming soon work section -->
-                <div class="image-box">
+                <!-- coming soon flex item -->
+                <div class="flex-item soon-1">
                     <img src="./assets/images/cs1.jpg"></a>
                     <h3>Coming Soon</h3>
                     <span>please wait</span>
                 </div>
 
-                <!-- coming soon work section  -->
-                <div class="image-box">
+                <!-- coming soon flex item  -->
+                <div class="flex-item soon-2">
                     <img src="./assets/images/cs2.jpg"></a>
                     <h3>Coming Soon</h3>
                     <span>please wait</span>
