--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <nav>
             <ul>
                 <li>
-                    <a href="#">About</a>
+                    <a href="#about">About</a>
                 </li>
 
                 <li>
@@ -31,7 +31,7 @@
                 </li>
 
                 <li>
-                    <a href="#">Contact</a>
+                    <a href="#contact">Contact</a>
                 </li>
 
             </ul>
@@ -42,9 +42,9 @@
 
     <!-- for hero banner -->
     <section class="hero">
-        <div>
+        <div class="hero-text">
             <!-- hero banner text -->
-           <h2 class="hero-text">Let's Code!💻</h2>
+           <h2 >Let's Code!💻</h2>
         </div> 
     </section>
    
@@ -71,10 +71,8 @@
             <div class="work-flex-container">
 
                 <!-- landing page flex item -->
-                <div class="main-flex-item">
-                    <a href="https://janiece-lewis.github.io/landing-page-mini-project/" target="_blank"><img
-                            src="./assets/images/workimage1.jpg"></a>
-
+                <div class="flex-item-main">
+                    <a href="https://janiece-lewis.github.io/landing-page-mini-project/" target="_blank"> <img src="./assets/images/workimage1.jpg">
                     <h3>Landing Page</h3>
                     <span>HTML CSS</span>
                 </div>
@@ -123,6 +121,7 @@
 
 
     </main>
+
 
 
 
