added flex-box to header and sections

--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
     <header>
 
 
-        <div class="name"><h1>Janiece Lewis</h1></div>
+        <div class="name">
+            <h1>Janiece Lewis</h1>
+        </div>
         <!-- nav bar -->
         <nav>
             <ul>
@@ -44,37 +46,38 @@
     <section class="hero">
         <div class="hero-text">
             <!-- hero banner text -->
-           <h2 >Let's Code!💻</h2>
-        </div> 
+            <h2>Let's Code!💻</h2>
+        </div>
     </section>
-   
+
 
 
     <!-- main content -->
     <main class="page-wrapper">
 
         <!-- about section -->
-        <section class="page-section" id="about"></section>
+        <section class="page-section" id="about">
 
-        <section class="about-content">
-            <h2>About</h2>
-            <p>Hello, I'm Janiece. Thanks for stopping by my profile. I am currently enrolled in a full-stack coding
-                bootcamp with OSU. Here is a collection of what I've worked on so far.</p>
+            <h2 class="section-header">About</h2>
+            <section class="about-content">
+                <p>Hello, I'm Janiece. Thanks for stopping by my profile. I am currently enrolled in a full-stack coding
+                    bootcamp with OSU. Here is a collection of what I've worked on so far.</p>
+            </section>
         </section>
-
         <!-- portfolio container -->
         <section class="page-section" id="work">
-            <h2>Work</h2>
-       
+            <h2 class="section-header">Work</h2>
+
 
             <!-- flex-box container for work sections -->
             <div class="work-flex-container">
 
                 <!-- landing page flex item -->
                 <div class="flex-item-main">
-                    <a href="https://janiece-lewis.github.io/landing-page-mini-project/" target="_blank"> <img src="./assets/images/workimage1.jpg">
-                    <h3>Landing Page</h3>
-                    <span>HTML CSS</span>
+                    <a href="https://janiece-lewis.github.io/landing-page-mini-project/" target="_blank"> <img
+                            src="./assets/images/workimage1.jpg">
+                        <h3>Landing Page</h3>
+                        <span>HTML CSS</span>
                 </div>
 
                 <!-- prework study guide flex item -->
