--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <h2 class="section-header">About</h2>
             <section class="about-content">
                 <p>Hello, I'm Janiece. Thanks for stopping by my profile. I am currently enrolled in a full-stack coding
-                    bootcamp with OSU. Here is a collection of what I've worked on so far.</p>
+                    bootcamp with OSU. Here is a collection of what I've worked on so far.</p> 
             </section>
         </section>
         <!-- portfolio container -->
@@ -73,42 +73,54 @@
             <div class="work-flex-container">
 
                 <!-- landing page flex item -->
-                <div class="flex-item-main">
-                    <a href="https://janiece-lewis.github.io/landing-page-mini-project/" target="_blank"> <img
-                            src="./assets/images/workimage1.jpg">
+                <!-- <div class="flex-item-main"> -->
+
+                <a href="https://janiece-lewis.github.io/landing-page-mini-project/" target="_blank"> <img
+                        id="main-img" src="./assets/images/workimage1.jpg">
+                    <div>
                         <h3>Landing Page</h3>
                         <span>HTML CSS</span>
-                </div>
+                    </div>
+
+                </a>
 
                 <!-- prework study guide flex item -->
-                <div class="flex-item prework">
+                <div class="small-flex-item">
                     <a href="https://janiece-lewis.github.io/prework-study-guide/" target="_blank"><img
-                            src="./assets/images/workimage2.jpg"></a>
-
-                    <h3>Prework Study Guide</h3>
-                    <span>HTML CSS</span>
+                            src="./assets/images/workimage2.jpg">
+                        <div>
+                            <h3>Prework Study Guide</h3>
+                            <span>HTML CSS</span>
+                        </div>
+                    </a>
                 </div>
 
                 <!-- codebase-refactor flex item -->
-                <div class="flex-item codebase">
+                <div class="small-flex-item">
                     <a href="https://janiece-lewis.github.io/SEO-Codebase-Refactor/" target="_blank"><img
-                            src="./assets/images/workimage3.jpg"></a>
-
-                    <h3>Codebase-Recator</h3>
-                    <span>HTML semantics</span>
+                            src="./assets/images/workimage3.jpg">
+                    <div>
+                        <h3>Codebase-Recator</h3>
+                        <span>HTML semantics</span>
+                    </div>
+                    </a>
                 </div>
                 <!-- coming soon flex item -->
-                <div class="flex-item soon-1">
-                    <img src="./assets/images/cs1.jpg"></a>
-                    <h3>Coming Soon</h3>
-                    <span>please wait</span>
+                <div class="small-flex-item">
+                    <img src="./assets/images/cs1.jpg">
+                    <div>
+                        <h3>Coming Soon</h3>
+                        <span>please wait</span>
+                    </div>
                 </div>
 
                 <!-- coming soon flex item  -->
-                <div class="flex-item soon-2">
-                    <img src="./assets/images/cs2.jpg"></a>
-                    <h3>Coming Soon</h3>
-                    <span>please wait</span>
+                <div class="small-flex-item">
+                    <img src="./assets/images/cs2.jpg">
+                    <div>
+                      <h3>Coming Soon</h3>
+                      <span>please wait</span>
+                    </div>
                 </div>
 
             </div>
@@ -118,9 +130,10 @@
 
         <!-- contact section -->
 
-        <section class="page-section" id="contact"></section>
+        <section class="page-section" id="contact">
 
-        <h2>Contact</h2>
+            <h2 class="section-header">Contact</h2>
+        </section>
 
 
     </main>
